feat: added vanish toasts
after delay, toast will vanish

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <span class="sr-only"></span>
       </div>
       <div class="images" id="gallery"></div>
+      <button id="refresh">Обновить галерею</button>
     </div>
     <script src="main.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
